test/conformance/chainsaw/deleting-policies/delete-pod/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: DeletingPolicy
metadata:
  # turn to policy exceptions
  name: delete-exceptions
spec:
  conditions:
  - expression: now() - timestamp(object.metadata.creationTimestamp) > duration("24h")
    name: check-pod-ns
  matchConstraints:
    resourceRules:
    - apiGroups:
      - "policies.kyverno.io"
      apiVersions:
      - v1
      resources:
      - policyexceptions
  # example schedule: every minute
  schedule: '*/1 * * * *'
